apps/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - port: 9697
      targetPort: 9697
      name: http
    - port: 8191
      targetPort: 8191
      name: flaresolverr
